--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -1,6 +1,6 @@
 name: sql_orch
 description: ''
-version: 0.1.0
+version: 0.0.1-SNAPSHOT
 author: g.ayush@prophecy.io
 language: sql
 buildSystem: ''
